[package]
name = "nibarchive_upgrade"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
nibarchive = { git = "https://github.com/michaelwright235/nibarchive" }
plist = "1.6"
